test : add creatLabelTest